--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.6.0",
     "@routerprotocol/router-crosstalk": "^0.1.0"
   }
 }
