--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.6.0",
-    "@routerprotocol/router-crosstalk": "^0.1.5"
+    "@routerprotocol/router-crosstalk": "^0.1.5",
+    "axios": "^1.1.3"
   }
 }
